--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ nav {
     color: grey;
     font: 11px Lato;
 }
-#small-header {
+#home {
     text-align: center;
     color: gray;
     font: 16px Lato;
@@ -22,4 +22,84 @@ nav {
 #vnl-raw {
     width: 575px;
     height: 235px;
+}
+h2 {
+    font-family: Lato, sans-serif;
+    font-weight:bold;
+    font-size:20px;
+    font: Lato;
+}
+#background {
+    text-align: center;
+    color: black;
+    font: 14px Lato;
+}
+#eurotracksimage {
+    width: 415px;
+    height: 450px;
+}
+h3 {
+    text-align: center;
+    font-family: Lato, sans-serif;
+    font-weight:bold;
+    font-size:16px;
+    font: Lato;
+}
+#gps, #route-planing, #inventory-management {
+    text-align: center;
+    font: 14px Lato;
+}
+#gpsimage, #mapimage, #serviceimage {
+    width: 575px;
+    height: 325px;
+}
+#quote {
+    width: 575px;
+    height: 250px;
+    background-color: #483D8B;
+}
+#quotecontent {
+    width: 400px;
+    height: 159px;
+}
+#quotetext {
+    font: 18px Lato;
+    color: whitesmoke;
+}
+#quoteauthor {
+    font: 14px Lato;
+    color: whitesmoke;
+}
+#clients {
+    text-align: center;
+}
+#clientscontent {
+    width: 465px;
+    height: 210px;
+    border-style: ridge;
+    text-align: center;
+    color: gray;
+    font: 16px Sourse Sans Pro;
+}
+#commentauthor {
+    text-align: center;
+    color: gray;
+    font: 14px Sourse Sans Pro;
+}
+#contactcontent {
+    text-align: center;
+    color: black;
+    font: 14px Lato
+}
+#formbuttons {
+    text-align: center;
+}
+#aboutpageimage {
+    width: 575px;
+    height: 425px;
+}
+#abouttext {
+    text-align: center;
+    color: black;
+    font: 16px Lato
 }
