--- a/styles/index.css
+++ b/styles/index.css
@@ -308,15 +308,20 @@ hr {
         font-size: 35px;
     }
 
-    header #container {
-        display: grid;
-    }
+   .container {
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+   }
 
-        #background {
+    #background {
 
         font-size: 14px;
         text-align: left;
-        margin-left: 5px;
+        margin-left: 15px;
+    }
+
+    #background p {
+        margin-left: 15%;
     }
 
     #eurotracksimage {
