--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,24 @@
     color: var(--main-color);
 }
 
+.navbar-expand-lg .navbar-collapse{
+    margin-left: 17%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+#homelik,
+#aboutlink,
+#featureslink,
+#contactlink,
+#clientslink {
+    margin-left: 50px;
+}
+
+
+
+
 h1 {
     font-family: 'Lato', sans-serif;
     font-size: 22px;
